<resources>
    <string name="app_name" translatable="false">Muser</string>
    <string name="menu_add_queue">Add to Queue</string>
    <string name="tab_songs">Songs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="tab_artists">Artists</string>
    <string name="notification_name">Music</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_playlists">Playlists</string>
    <string name="menu_queue_remove_from">Remove From Queue</string>
    <string name="menu_queue_add_to_playlist">Add to Playlist</string>
    <string name="queue_removed">%s removed from the queue</string>
    <string name="menu_play_next">Play Next</string>
    <string name="description_show_queue">Show Queue</string>
    <string name="description_more">More</string>
    <string name="description_playlist_cover">Playlist Cover</string>
    <string name="playlist_recently_added">Recently Added</string>
    <string name="description_album_cover">Album Cover</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add_to_playlist">Add to Playlist</string>
    <string name="dialog_new_playlist">New Playlist</string>
    <string name="dialog_create_playlist">Create Playlist</string>
    <string name="description_playlist_name">Playlist Name</string>
    <string name="dialog_create">Create</string>
    <string name="toast_playlist_exists">Playlist already exists!</string>
    <string name="dialog_edit_playlist">Edit Playlist</string>
    <string name="dialog_delete">Delete Playlist</string>
    <string name="dialog_apply">Apply Change</string>
    <string name="menu_remove_from_playlist">Remove from playlist</string>
    <string name="queue_shuffle">Shuffle</string>
    <string name="menu_queue_clear">Clear Queue</string>
    <string name="menu_queue_save_playlist">Save as Playlist</string>
    <string name="description_drop">Drop Down</string>
    <string name="list_no_song">It\'s seems as you have no songs in this folder, try to change folder with the 3 dots up top and pick a different folder</string>
    <string name="preference_path">Path</string>
    <string name="preference_path_group">Source Settings</string>
    <string name="preference_all_path">All</string>
    <string name="preference_default_path">Use Default Folder</string>
    <string name="preference_default_path_summary">Choose the default folder as the music source</string>
    <string name="preference_notification_group">Notification Settings</string>
    <string name="preference_notification_open_title">Notification Click</string>
    <string name="preference_notification_open_summary">Open current song screen when clicking the notification</string>
    <string name="about">This app is for playing music from local files on device. For best user experience use a mp3 tag app like AutomaTag (to have correct metadata of songs and album arts). If you find any bugs please report them to me.</string>
    <string name="preference_display_group">Display Settings</string>
    <string name="preference_screen_on_title">Screen On</string>
    <string name="preference_screen_on_summary">Keep screen on when displaying current song</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search for songs</string>
    <string name="search_result">Showing results for: %s</string>
    <string name="list_no_song_query">Couldn\'t find any songs matching your search keyword.\nTry again with a different keyword.</string>
    <string name="description_skip_prev">Skip To Previous Song</string>
    <string name="description_skip_next">Skip To Next Song</string>
    <string name="description_play_pause">Play/Pause</string>
    <string name="description_repeat">Toggle Repeat Mode</string>
    <string name="description_queue">Queue</string>
    <string name="dialog_delete_playlist_title">Delete Playlist</string>
    <string name="dialog_delete_playlist_content">Are you sure you want to delete this playlist?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="preference_stop_task_title">Stop on Swipe</string>
    <string name="preference_stop_task_summary">Stop the application when swiping up\\down the app</string>
    <string name="preference_general_group">General Settings</string>
</resources>
