<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_path_group">
        <Preference
            android:key="path"
            android:title="@string/preference_path" />
        <Preference
            android:key="default_path"
            android:summary="@string/preference_default_path_description"
            android:title="@string/preference_default_path" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_notification_group">
        <SwitchPreferenceCompat
            android:key="notification"
            android:summary="@string/preference_notification_open_summary"
            android:title="@string/preference_notification_open_title" />
    </PreferenceCategory>
</PreferenceScreen>
