<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.dialogs.NewPlaylistDialog">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNewPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="16dp"
        android:text="@string/dialog_create_playlist"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPlaylistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:autofillHints="@null"
        android:ems="10"
        android:hint="@string/description_playlist_name"
        android:inputType="textAutoCorrect|text"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginVertical="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dialog_cancel"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreate"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:maxLines="1"
                android:text="@string/dialog_create"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>