<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    tools:context=".fragments.ExtendedInfoFragment">

    <ImageButton
        android:id="@+id/btnMore"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/description_more"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/more"
        android:tintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnQueue"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/description_show_queue"
        android:foreground="?attr/selectableItemBackground"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/queue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMore"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ivDrop"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/description_drop"
        android:foreground="?attr/selectableItemBackground"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>