<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.dialogs.PlaylistsDialog">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAddToPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/spinnerPlaylists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewPlaylist"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_new_playlist"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:text="@string/dialog_cancel"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:text="@string/dialog_add_to_playlist"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>