<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:orientation="horizontal"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/ivSongCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_album_cover"
        android:scaleType="fitCenter"
        android:src="@drawable/song" />

    <android.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="6"
        android:rowCount="3">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:text="TextView" />

        <TextView
            android:id="@+id/tvArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ibSkipPrev"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/description_skip_prev"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/skip_prev"
                app:srcCompat="@drawable/skip_prev" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ibPlayPause"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/description_play_pause"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/play" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ibSkipNext"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/description_skip_next"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/skip_next" />
        </LinearLayout>
    </android.widget.GridLayout>

</LinearLayout>