<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/extendedFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:orientation="vertical"
    tools:context=".fragments.ExtendedFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/infoFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/layoutFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1">

    </androidx.fragment.app.FragmentContainerView>

    <TextView
        android:id="@+id/tvSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSongArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/sbSongProgress"
        app:layout_constraintEnd_toEndOf="@+id/sbSongProgress"
        app:layout_constraintStart_toStartOf="@+id/sbSongProgress" />

    <SeekBar
        android:id="@+id/sbSongProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTimeElapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btnPlayPause"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btnPlayPause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnSkipPrev"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/description_skip_prev"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/skip_prev"
            app:layout_constraintBottom_toBottomOf="@+id/btnPlayPause"
            app:layout_constraintEnd_toStartOf="@+id/btnPlayPause" />

        <ImageButton
            android:id="@+id/btnPlayPause"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/description_play_pause"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btnSkipNext"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/description_skip_next"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/skip_next"
            app:layout_constraintBottom_toBottomOf="@+id/btnPlayPause"
            app:layout_constraintStart_toEndOf="@+id/btnPlayPause" />

        <ImageButton
            android:id="@+id/btnRepeat"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/description_repeat"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/repeat_all"
            app:layout_constraintBottom_toBottomOf="@+id/btnSkipNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnSkipNext"
            app:layout_constraintTop_toTopOf="@+id/btnSkipNext" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>